[package]
name = "cdx"
version = "0.1.15"
authors = ["Andy Jewell <avjewe@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library and application for text file manipulation and command line data mining, a little like the gnu textutils"
homepage = "https://avjewe.github.io/cdxdoc/"
repository = "https://github.com/avjewe/cdx"
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["cli", "terminal", "text", "sort", "join"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1" 
flate2 = "1"
fs-err = "2"
libm = "0"
memchr = "2"
clap = "3"
tempdir = "0.3"
memmap = "0.7"
fnv = "1"
nom = "1" # Should upgrade to version 7 at some point
libc = "0.2"
unicode-width = "0.1"
unicode-truncate = "0.2"
rand = "0.8"
rand_distr = "0.4"
fastrand = "1.7"

aws-config = "0.5"
aws-sdk-s3 = "0.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.8"
aws-smithy-http = "0.35"
bytes = "1.1"
base64 = "0.13"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]
