[package]
name = "cdx"
version = "0.1.22"
authors = ["Andy Jewell <avjewe@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library and application for text file manipulation and command line data mining, a little like the gnu textutils"
homepage = "https://avjewe.github.io/cdxdoc/"
repository = "https://github.com/avjewe/cdx"
categories = ["command-line-interface", "command-line-utilities", "development-tools"]
keywords = ["cli", "terminal", "text", "sort", "join"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
flate2 = "1"
fs-err = "3"
libm = "0"
memchr = "2"
clap = "3"
tempfile = "3"
memmap2 = "0"
libc = "0"
unicode-width = "0"
unicode-truncate = "2"
rand = "0"
rand_distr = "0"
fastrand = "2"

aws-sdk-s3 = { version = "1", optional = true }
aws-config = { version = "1", optional = true }

tokio = { version = "1", features = ["full"] }
bytes = "1"
base64 = "0" # TODO make this "0"
binary-heap-plus = "0"
anyhow = "1"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]

[features]
s3 = ["aws-config", "aws-sdk-s3"]
