[package]
name = "cdx"
version = "0.1.1"
authors = ["Andy Jewell <avjewe@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "App for text file manipulation, a little like the gnu coreutils"
homepage = "https://github.com/avjewe/cdx"
repository = "https://github.com/avjewe/cdx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cdxlib = { version = "0.1", path = "../cdxlib" }
clap = "2"
