[package]
name = "cdxlib"
version = "0.1.3"
authors = ["Andy Jewell <avjewe@gmail.com>"]
edition = "2021"
license = "BSD-3-Clause"
description = "Library for text file manipulation and support for cdx, a little like the gnu coreutils"
homepage = "https://github.com/avjewe/cdx"
repository = "https://github.com/avjewe/cdx"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
lazy_static = "1" 
flate2 = "1"
fs-err = "2"
libm = "0"
itertools = "0.10"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples=all"]
