[package]
name = "cdxlib"
version = "0.1.5"
authors = ["Andy Jewell <avjewe@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Now defunct, contents rolled into the cdx crate"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
